templates/vault-config-operator_template.yaml
---
# Source: vault-config-operator/templates/v1_service_vault-config-operator-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: vault-config-operator-certs
  labels:
    control-plane: vault-config-operator
  name: vault-config-operator-controller-manager-metrics-service
  namespace: default
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: vault-config-operator
---
# Source: vault-config-operator/templates/v1_service_vault-config-operator-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: webhook-server-cert
  name: vault-config-operator-webhook-service
  namespace: default
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 9443
  selector:
    control-plane: vault-config-operator
---
# Source: vault-config-operator/templates/manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-vault-config-operator
  labels:
    helm.sh/chart: vault-config-operator-v0.8.27
    app.kubernetes.io/name: vault-config-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.8.27"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: vault-config-operator
      app.kubernetes.io/instance: release-name
      control-plane: vault-config-operator
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vault-config-operator
        app.kubernetes.io/instance: release-name
        control-plane: vault-config-operator
    spec:
      securityContext:
        runAsNonRoot: true
      serviceAccountName: controller-manager
      containers:
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --tls-cert-file=/etc/certs/tls/tls.crt
        - --tls-private-key-file=/etc/certs/tls/tls.key
        - --v=0
        image: "quay.io/redhat-cop/kube-rbac-proxy:v0.11.0"
        name: kube-rbac-proxy
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 8443
          name: https
        volumeMounts:
        - mountPath: /etc/certs/tls
          name: metrics-service-cert
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
      - command:
        - /manager
        args:
        - --leader-elect
        image: "quay.io/redhat-cop/vault-config-operator:v0.8.27"
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: webhook-service-cert
          readOnly: true
          mountPath: /tmp/k8s-webhook-server/serving-certs
        name: vault-config-operator
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: metrics-service-cert
        secret:
          defaultMode: 420
          secretName: vault-config-operator-certs
      - name: webhook-service-cert
        secret:
          secretName: webhook-server-cert
          defaultMode: 420
---
# Source: vault-config-operator/templates/admissionregistration.k8s.io_v1_mutatingwebhookconfiguration_vault-config-operator-mutating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: ''
    service.beta.openshift.io/inject-cabundle: 'true'
  creationTimestamp: null
  name: vault-config-operator-mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-authenginemount
  failurePolicy: Fail
  name: mauthenginemount.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - authenginemounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-databasesecretengineconfig
  failurePolicy: Fail
  name: mdatabasesecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - databasesecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-databasesecretenginerole
  failurePolicy: Fail
  name: mdatabasesecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - databasesecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-databasesecretenginestaticrole
  failurePolicy: Fail
  name: mdatabasesecretenginestaticrole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - databasesecretenginestaticroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-githubsecretengineconfig
  failurePolicy: Fail
  name: mgithubsecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - githubsecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-githubsecretenginerole
  failurePolicy: Fail
  name: mgithubsecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - githubsecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-group
  failurePolicy: Fail
  name: mgroup.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-groupalias
  failurePolicy: Fail
  name: mgroupalias.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groupalias
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-jwtoidcauthengineconfig
  failurePolicy: Fail
  name: mjwtoidcauthengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - jwtoidcauthengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-jwtoidcauthenginerole
  failurePolicy: Fail
  name: mjwtoidcauthenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - jwtoidcauthengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-kubernetesauthengineconfig
  failurePolicy: Fail
  name: mkubernetesauthengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - kubernetesauthengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-kubernetesauthenginerole
  failurePolicy: Fail
  name: mkubernetesauthenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - kubernetesauthengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-kubernetessecretengineconfig
  failurePolicy: Fail
  name: mkubernetessecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - kubernetessecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-kubernetessecretenginerole
  failurePolicy: Fail
  name: mkubernetessecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - kubernetessecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-ldapauthengineconfig
  failurePolicy: Fail
  name: mldapauthengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - ldapauthengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-ldapauthenginegroup
  failurePolicy: Fail
  name: mldapauthenginegroup.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - ldapauthenginegroups
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-passwordpolicy
  failurePolicy: Fail
  name: mpasswordpolicy.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - passwordpolicies
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-pkisecretengineconfig
  failurePolicy: Fail
  name: mpkisecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - pkisecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-pkisecretenginerole
  failurePolicy: Fail
  name: mpkisecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - pkisecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-policy
  failurePolicy: Fail
  name: mpolicy.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - policies
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-quaysecretengineconfig
  failurePolicy: Fail
  name: mquaysecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - quaysecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-quaysecretenginerole
  failurePolicy: Fail
  name: mquaysecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - quaysecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-quaysecretenginestaticrole
  failurePolicy: Fail
  name: mquaysecretenginestaticrole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - quaysecretenginestaticroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-rabbitmqsecretenginerole
  failurePolicy: Fail
  name: mrabbitmqsecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - rabbitmqsecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-randomsecret
  failurePolicy: Fail
  name: mrandomsecret.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - randomsecrets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-secretenginemount
  failurePolicy: Fail
  name: msecretenginemount.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    resources:
    - secretenginemounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /mutate-redhatcop-redhat-io-v1alpha1-vaultsecret
  failurePolicy: Fail
  name: mvaultsecret.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vaultsecrets
  sideEffects: None
---
# Source: vault-config-operator/templates/admissionregistration.k8s.io_v1_validatingwebhookconfiguration_vault-config-operator-validating-webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: ''
    service.beta.openshift.io/inject-cabundle: 'true'
  creationTimestamp: null
  name: vault-config-operator-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-authenginemount
  failurePolicy: Fail
  name: vauthenginemount.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - authenginemounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-databasesecretengineconfig
  failurePolicy: Fail
  name: vdatabasesecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - databasesecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-databasesecretenginerole
  failurePolicy: Fail
  name: vdatabasesecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - databasesecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-databasesecretenginestaticrole
  failurePolicy: Fail
  name: vdatabasesecretenginestaticrole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - databasesecretenginestaticroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-githubsecretengineconfig
  failurePolicy: Fail
  name: vgithubsecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - githubsecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-githubsecretenginerole
  failurePolicy: Fail
  name: vgithubsecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - githubsecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-group
  failurePolicy: Fail
  name: vgroup.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groups
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-groupalias
  failurePolicy: Fail
  name: vgroupalias.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - groupalias
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-jwtoidcauthengineconfig
  failurePolicy: Fail
  name: vjwtoidcauthengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - jwtoidcauthengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-jwtoidcauthenginerole
  failurePolicy: Fail
  name: vjwtoidcauthenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - jwtoidcauthengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-kubernetesauthengineconfig
  failurePolicy: Fail
  name: vkubernetesauthengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - kubernetesauthengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-kubernetesauthenginerole
  failurePolicy: Fail
  name: vkubernetesauthenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kubernetesauthengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-kubernetessecretengineconfig
  failurePolicy: Fail
  name: vkubernetessecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - kubernetessecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-kubernetessecretenginerole
  failurePolicy: Fail
  name: vkubernetessecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - kubernetessecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-ldapauthengineconfig
  failurePolicy: Fail
  name: vldapauthengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - ldapauthengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-ldapauthenginegroup
  failurePolicy: Fail
  name: vldapauthenginegroup.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - ldapauthenginegroups
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-pkisecretengineconfig
  failurePolicy: Fail
  name: vpkisecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - pkisecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-pkisecretenginerole
  failurePolicy: Fail
  name: vpkisecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - pkisecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-quaysecretengineconfig
  failurePolicy: Fail
  name: vquaysecretengineconfig.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - quaysecretengineconfigs
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-quaysecretenginerole
  failurePolicy: Fail
  name: vquaysecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - quaysecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-quaysecretenginestaticrole
  failurePolicy: Fail
  name: vquaysecretenginestaticrole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - quaysecretenginestaticroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-rabbitmqsecretenginerole
  failurePolicy: Fail
  name: vrabbitmqsecretenginerole.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - rabbitmqsecretengineroles
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-randomsecret
  failurePolicy: Fail
  name: vrandomsecret.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - randomsecrets
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-secretenginemount
  failurePolicy: Fail
  name: vsecretenginemount.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - UPDATE
    resources:
    - secretenginemounts
  sideEffects: None
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: vault-config-operator-webhook-service
      namespace: default
      path: /validate-redhatcop-redhat-io-v1alpha1-vaultsecret
  failurePolicy: Fail
  name: vvaultsecret.kb.io
  rules:
  - apiGroups:
    - redhatcop.redhat.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - vaultsecrets
  sideEffects: None
